# Django_BackEnd_Ebac

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  manage.py  pyproject.toml  render.yaml
.github/workflows/: main.yml
loja/: admin.py  models.py  serializers.py  urls.py  views.py
loja/migrations/: 0001_initial.py
setup_django/: asgi.py  settings.py
