[tool.poetry]
name = "django-backend-ebac"
version = "0.1.0"
description = "Projeto Bookstore Módulos 59-68"
authors = ["Kaio Grativol Baldo <78832356+KaioGBaldo@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
django = "6.0.4"
djangorestframework = "^3.15"
httpx = "^0.28.1"
psycopg2-binary = "^2.9.9"
dj-database-url = "^3.1.2"
whitenoise = "^6.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"